--- a/public/css/main.css
+++ b/public/css/main.css
@@ -294,9 +294,13 @@ LOGIN
         
 
         /************* BUSCANDO A JENNY ****************/
-
-        
-
+        .jenny .video{width: 90%; height: 230px;}
+        .jenny .video iframe{width: 100%; height: 100%; margin: 0 auto;}
+        .jenny .shared{width: 100%; text-align: center;}
+        .jenny .shared a{float: none !important; display: inline-block !important;}
+        .jenny .miniaturas{width: 100%; text-align: center;}
+        .jenny .miniaturas .thumbs{margin: 0 auto; float: none;}
+        .jenny .title_jenny{width: 90%; font-size: 24px;}
         /************* SUBE UN DATO ****************/
 
 
