--- a/public/css/main.css
+++ b/public/css/main.css
@@ -279,6 +279,8 @@ LOGIN
         header.desktop .submenu .user{margin: 0 auto; float: none;}
         header.desktop .submenu .shares{text-align: center; padding-top: 20px;}
 
+        #container{margin-top: 0;}
+
         footer{text-align: center; position: fixed; width: 100%; bottom:0; left: 0; z-index: 2;}
         footer #footer_content{width: 100%;}
         footer .contenido-footer{width:100%;float: none; overflow: hidden; height: auto; margin: 0 auto; }
