--- a/public/css/main.css
+++ b/public/css/main.css
@@ -63,7 +63,7 @@ textarea {
 html,body{margin: 0; padding: 0;font-family:'boogalooregular','Arial',sans-serif; font-size: 18px; background:url("../img/bg.jpg") top center ;}
 #container{ min-height: 600px; margin-top: -23px;}
 .container{max-width:960px; margin: 0 auto; }
-#content{position: relative; background:url("../img/bg.jpg") top center ;}
+#content{position: relative; background:url("../img/bg.jpg") #e1ead9 top center ;}
 
 /** COMMON **/
 h2{text-shadow: -1px 1px #fff, -4px 4px #333;}
