--- a/public/css/main.css
+++ b/public/css/main.css
@@ -133,7 +133,7 @@ header .submenu .userdata a:hover{color: #333;}
 /*************************************
 POPUP 
 *************************************/
-.popup{background:rgba(0,0,0,0.8); padding-top: 10%; position: fixed; top: 0; left: 0; width: 100%; height: 90%; z-index: 1;}
+.popup{background:rgba(0,0,0,0.8); padding-top: 10%; position: fixed; top: 0; left: 0; width: 100%; height: 90%; z-index: 11;}
 .popup .bg{background: url("../img/bg-popup.png") repeat-y; background-size: 100% 100%;width: 90%; max-width: 340px; margin: 0 auto; }
 .popup .bg .wrapper{padding:45px 40px 20px 40px; position: relative; z-index: 2;}
 
@@ -278,6 +278,7 @@ LOGIN
         header.desktop .submenu .userdata{width: 100%; float: none;}
         header.desktop .submenu .user{margin: 0 auto; float: none;}
         header.desktop .submenu .shares{text-align: center; padding-top: 20px;}
+        header.desktop .submenu .links a{color:#fff; display: block; text-align:center;}
 
         #container{margin-top: 0;}
 
