--- a/public/css/diego.css
+++ b/public/css/diego.css
@@ -163,6 +163,7 @@
 	outline:none;
 	padding-left:10px;
 	padding-top:10px;
+	font-family: 'boogalooregular',sans-serif;
 }
 .btn-enviar{
 	width:396px;
