--- a/public/css/main.css
+++ b/public/css/main.css
@@ -158,9 +158,13 @@ LOGIN
 #login .facebook-connect img{width: 100%;}
 #login hr{background: url("../img/hr-or.png") no-repeat; width: 259px; margin: 0 auto; display: block; height: 20px; margin: 10px auto; border:none;}
 #login .btn-red{border:none; width: 136px; margin: 5px auto; padding: 0;  }
+#login .already_registered{display: block; text-align: center; padding-bottom: 10px;}
 
 #thanks h3{margin: 0;}
 #thanks .btn-red{margin:0 auto; display: block;}
+
+#forgot form input{display: block; clear: both; width: 94%; margin: 5% 0; outline:none; padding: 3%; font-family: 'boogalooregular'; border-radius:5px; border:solid 1px #ccc; font-size: 15px;}
+#forgot .btn-red{border:none; width: 136px; margin: 5px auto; padding: 0;  }
 /************************************************************
     PAGES 
 ************************************************************/
@@ -216,18 +220,22 @@ LOGIN
 .categories li.active span{background: #f00;}
 
 /* DETALLE CITY */
-.detalle_city{background: url(../img/bg_detalle_city.png) no-repeat 0 0; width: 910px;height: 670px;display: block;margin: 0 auto;padding: 40px 0 0 40px;}
+.detalle_city{background: url(../img/bg_detalle_city.png) no-repeat 0 0; overflow: hidden; width: 910px; background-size:auto 100%;display: block;margin: 0 auto;padding: 40px 0 20px 40px;}
 .detalle_city h2.slide{font-family: 'boogalooregular';font-size: 1em;color: #d70303;text-shadow: none;text-align: left; clear:both;}
-.detalle_city ul{width: 940px;margin: 0 auto;overflow: hidden;text-align: center;list-style: none;padding: 0;}
-.detalle_city ul li{ float: left;width: 109px;height: 109px;margin: 0 15px 10px 0; padding: 0;}
+.detalle_city .images ul{width: auto;margin: 0 auto;overflow: hidden;text-align: center;list-style: none;padding: 0;}
+.detalle_city .images ul li{ float: left;width: 180px;height: 109px;margin: 0 15px 10px 0; padding: 0;}
 .detalle_city #map{ width:850px;height:262px;margin:0 auto; padding: 0; float:left;}
 .detalle_city .shared{ width:590px; height:60px; float:right;}
 .detalle_city .shared a:hover{opacity: 0.7;}
 .detalle_city .shared .ruta{ background:url(../img/btn_anadir.png) no-repeat 0 0; width:211px; height:43px; display:block; float:left; cursor:pointer;}
 .detalle_city .shared .face{ background:url(../img/btn_facebook.png) no-repeat 0 0; width:182px; height:46px; display:block; float:left; cursor:pointer;}
 .detalle_city .shared .tw{  background: url(../img/btn_twitter.png) no-repeat 0 0; width:185px; height:46px; display:block; float:left; cursor:pointer;}
-.detalle_city .imgs li{width: 150px; overflow: hidden; border-radius:10px;}
+.detalle_city .imgs li{width: 150px; display: inline-block; overflow: hidden; border-radius:10px;}
 .detalle_city .imgs li img{width: 100%; border-radius:10px;}
+.detalle_city .images{width:50%; float: left;}
+.detalle_city .detail{width:30%; float: left; text-align: left;}
+
+
 #view .comments{max-width: 90%; width: 910px; margin: 0 auto; background: #eee}
 #view .comments iframe,
 #view .comments .fb-comments span{width: 100% !important;}
@@ -279,7 +287,7 @@ LOGIN
         header.desktop .submenu .user{margin: 0 auto; float: none;}
         header.desktop .submenu .shares{text-align: center; padding-top: 20px;}
         header.desktop .submenu .links a{color:#fff; display: block; text-align:center;}
-
+        header.desktop{padding-bottom:40px}
         #container{margin-top: 0;}
 
         footer{text-align: center; position: fixed; width: 100%; bottom:0; left: 0; z-index: 2;}
