--- a/public/css/main.css
+++ b/public/css/main.css
@@ -88,8 +88,8 @@ a:hover{opacity: 0.85;}
 header{background:url("../img/bg-menu-top.png") repeat-x; position: relative; z-index: 1; height: 71px; }
 header ul,
 header ul li{margin:0; padding: 0; list-style: none;}
-header ul{width: 610px; margin:0 auto;}
-header ul.complete{width:910px;}
+header ul{width: 650px; margin:0 auto;}
+header ul.complete{width:950px;}
 header ul li{float:left; padding: 12px 15px; padding-top: 8px; background: top left url('../img/menu-separator.png') no-repeat; }
 header ul li:first-child{background: none;}
 header li a{ color:#fff; font-size: 17px; line-height: 25px; text-decoration: none; padding: 2px; font-weight: normal; display: inline-block; }
@@ -107,6 +107,8 @@ header .submenu .userdata .user a{display: block; float: right; text-align: righ
 header .submenu .userdata{width:300px; float:right; text-align: right;}
 header .submenu .userdata a{color: #000;  font-size: 1em;  display: inline-block; padding: 3px 10px; text-decoration: none; text-transform: uppercase;}
 header .submenu .userdata a:hover{color: #333;}
+header.desktop .submenu .shares .fb-like{float: left;}
+header.desktop .submenu .shares .twitter-share-button{padding-top: 5px; float: left; padding-left: 10px;}
 .logo{text-align: center; clear: both; margin: 0 auto; display: block;  display: block;  max-width: 80%; mar}
 
 
@@ -220,13 +222,13 @@ LOGIN
 .rating .mark.active:hover{background-position: 0 0; opacity:0.8;}
 
 /* RATING-BIG */
-.rating-big{width: 400px; text-align: left; overflow: hidden;}
+.rating-big{width: 500px; text-align: left; overflow: hidden; position: relative;}
 .rating-big .mark{width: 32px; height: 27px; background: url("../img/hearts-big.png") no-repeat 0 0px; overflow: hidden; display: block; float:left; cursor: pointer;  }
 .rating-big .mark.active{background-position: 0 -27px; }
 .rating-big:hover .mark{background-position: 0 0;}
 .rating-big .mark.hover{background-position: 0 -27px;}
 .rating-big label{font-size: 0.9em; display: block; float: left; height: 30px; line-height: 30px; color: #d70303; padding-left: 10px;}
-
+.rating-big .already_voted{position:absolute; left: 300px; top: -10px;}
 /* Categories */
 .categories{background: url("../img/bg-menu-categories.png") center top no-repeat; height: 85px;}
 .categories ul{width: 100%; padding:0; margin: 0 auto; overflow: hidden; text-align: center; list-style: none;}
@@ -253,8 +255,8 @@ LOGIN
 .detalle_city .imgs li{width: 150px; display: inline-block; overflow: hidden; border-radius:10px;}
 .detalle_city .imgs li img{width: 100%; border-radius:10px;}
 .detalle_city .images{width:50%; float: left;}
-.detalle_city .detail{width:30%; float: left; text-align: left;}
-
+.detalle_city .detail{width:45%; float: left; text-align: left;}
+.detalle_city .rating-count{text-align: left;}
 
 #view .comments{max-width: 90%; width: 910px; margin: 0 auto; background: #eee}
 #view .comments iframe,
@@ -267,9 +269,12 @@ LOGIN
 /* SUBMIT TIP */
 #submit-tip #map-container{width:104%; background: #ccc; clear: both; float: left; margin-left: -4%; }
 #submit-tip #map{width: 100%; height: 190px;}
+#submit-tip .thanks{width: 90%; margin: 0 auto;}
+#submit-tip .thanks h1{font-size: 1.6em;}
 
 /* BUSCANDO A JENNY */
 .jenny { margin:1em auto; position:relative;}
+.jenny .intro{font-size: 1.4em;}
 .jenny .title_jenny{font-family: 'boogalooregular';font-size: 1em;color: #d70303;text-shadow: none;text-align: left; clear:both; width:670px; margin:1em auto;}
 .jenny .video{background: #000; width:690px;height:436px;display: block;margin: 0 auto; padding:0;}
 .jenny .video iframe{ width:674px;height:430px;display: block;margin: 5px auto;padding:0; border:none;}
