--- a/public/css/main.css
+++ b/public/css/main.css
@@ -330,12 +330,14 @@ LOGIN
     @media only screen and (max-width: 767px) {
         /********* HEADER ***********/
         html,body{width: 100%;}
-        header.mobile{width: 100%; height: 65px; background:#022562 url("../img/logo-mobile.png") no-repeat center center; overflow: hidden;}
+        #content{background:url("../img/bg.jpg") top center ;}
+        header.mobile{width: 100%; height: 65px; background:#022562 url("../img/logo-mobile.png") no-repeat center center; overflow: hidden; position: relative; z-index: 1 }
         /*header ul{display: none; width: 100%;background:#022562;opacity:0.99;position: fixed; top: 65px; left: 0; }
         header ul li{display: block;float: none; text-align: center; border:none; background:none; padding:0; border-bottom: solid 1px #666; margin: 0 5% ;}
         header .menu{float:right; line-height: 60px; padding-right: 1.5%;}
         header .submenu{display: none;}*/
-        header .menu{float:left; line-height: 60px; padding-right: 1.5%;}
+        header .menu{float:left; line-height: 60px; padding-right: 1.5%; position:relative; background: none;}
+        header.desktop .menu{height: auto; }
         header.desktop{display: block; position: fixed; top: 0; left: 0; z-index: 0; width: 270px; height: 100%; background: #232323;}
         header.desktop ul{width: 100%; padding-top: 50px;}
         header.desktop ul li{display: block;float: none; text-align: center; border:none; background:none; padding:0; border-bottom: solid 1px #666; margin: 0 5% ;}
@@ -346,13 +348,15 @@ LOGIN
         header.desktop .submenu .shares{text-align: center; padding-top: 20px;}
         header.desktop .submenu .links a{color:#fff; display: block; text-align:center;}
         header.desktop{padding-bottom:40px}
+        header .submenu .userdata .links a{background: none;}
+
         #container{margin-top: 0;}
 
         footer{text-align: center; position: fixed; width: 100%; bottom:0; left: 0; z-index: 2;}
         footer #footer_content{width: 100%;}
         footer .contenido-footer{width:100%;float: none; overflow: hidden; height: auto; margin: 0 auto; }
         footer .copyright{float:none; display: block}
-        footer .social-media{margin: 0 auto; float: none; display: block; width: 100px;}
+        footer .social-media{margin: 0 auto; float: none; display: block; width: 120px;}
         /************* COMUNES (BOTONES, MENUS, ETC) ****************/
         .datos{text-align: center;}
         .datos .dato-small{margin:0 auto; display: block; overflow: hidden; float: none;}
@@ -398,6 +402,8 @@ LOGIN
         .despcripcion-form{width: 90%; margin: 0 auto; padding: 0; float: none; overflow: hidden; padding-bottom: 10px;}
         .area-form{width: 93%; padding: 3%; margin: 0;}
         .btn-enviar{width: 100%; float: none; margin: 0 auto; overflow: hidden; padding-top: 10px; background-repeat: no-repeat; background-position: center center; }
+        .copyright{width: 90%;}
+        .bases{padding: 0;}
     }
     /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
     @media only screen and (min-width: 480px) and (max-width: 767px) {
